--- a/style.css
+++ b/style.css
@@ -1,1 +1,83 @@
+body {
+	background-color: beige;
+	}
 
+button {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	outline: none;
+	border: 0;
+	vertical-align: middle;
+	text-decoration: none;
+	font-family: inherit;
+	font-size: 15px;
+   }
+   
+   button.navbar {
+	font-weight: 600;
+	font-family: "Inter", sans-serif;
+	color: #382b22;
+	text-transform: uppercase;
+	padding: 1.25em 2em;
+	background: #fff0f0;
+	border: 2px solid #b18597;
+	border-radius: 0.75em;
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	-webkit-transition: background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+	transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+   }
+   
+   button.navbar::before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #f9c4d2;
+	border-radius: inherit;
+	-webkit-box-shadow: 0 0 0 2px #b18597, 0 0.625em 0 0 #ffe3e2;
+	box-shadow: 0 0 0 2px #b18597, 0 0.625em 0 0 #ffe3e2;
+	-webkit-transform: translate3d(0, 0.75em, -1em);
+	transform: translate3d(0, 0.75em, -1em);
+	transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+   }
+   
+   button.navbar:hover {
+	background: #ffe9e9;
+	-webkit-transform: translate(0, 0.25em);
+	transform: translate(0, 0.25em);
+   }
+   
+   button.navbar:hover::before {
+	-webkit-box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
+	box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
+	-webkit-transform: translate3d(0, 0.5em, -1em);
+	transform: translate3d(0, 0.5em, -1em);
+   }
+   
+   button.navbar:active {
+	background: #ffe9e9;
+	-webkit-transform: translate(0em, 0.75em);
+	transform: translate(0em, 0.75em);
+   }
+   
+   button.navbar:active::before {
+	-webkit-box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
+	box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
+	-webkit-transform: translate3d(0, 0, -1em);
+	transform: translate3d(0, 0, -1em);
+   }
+
+   .card {
+	/* color used to softly clip top and bottom of the .words container */
+	--bg-color: #212121;
+	background-color: var(--bg-color);
+	padding: 1rem 2rem;
+	border-radius: 1.25rem;
+  }
+  
